--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
-  We're coming soon
+  <section class="main-container">
+    <img class="logo" src="./images/logo.svg" alt="">
+    <img class="picture" src="./images/hero-mobile.jpg" alt="">
+    <h1><span>We're</span> coming soon</h1>
+    <p class="description">Hello fellow shoppers! We're currently building our new fashion store. 
+      Add your email below to stay up-to-date with announcements and our launch deals.</p>
+      <form action="">
+        <input type="text" placeholder="Email Address">
+        <input type="image" src="./images/icon-arrow.svg">
+      </form>
+  </section>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
-  
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.youtube.com/CodingTube">David Ruiz</a>.
     </p>
   </footer>
 </body>
