--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 </head>
 <body>
 
-  <section class="main-container">
-    <img class="logo" src="./images/logo.svg" alt="">
-    <img class="picture" src="./images/hero-mobile.jpg" alt="">
-    <h1><span>We're</span> coming soon</h1>
-    <p class="description">Hello fellow shoppers! We're currently building our new fashion store. 
-      Add your email below to stay up-to-date with announcements and our launch deals.</p>
-      <form action="">
-        <input type="text" placeholder="Email Address">
-        <input type="image" src="./images/icon-arrow.svg">
+  <section class="container">
+    <img class="container__logo" src="./images/logo.svg">
+    <img class="container__picture" src="./images/hero-mobile.jpg" alt="picture">
+    <div class="container__content">
+      <h1 class="container__content__title"><span class="container__content__title--color-red">We're</span> coming soon</h1>
+      <p class="container__content__description">Hello fellow shoppers! We're currently building our new fashion store.
+        Add your email below to stay up-to-date with announcements and our launch deals.</p>
+      <form class="container__content__form" action="">
+        <input class="container__content__form__text"  type="text" placeholder="Email Address">
+        <input class="container__content__form__image" type="image" src="./images/icon-arrow.svg">
       </form>
+    </div>
   </section>
 
   <footer>
