script for video

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         Add your email below to stay up-to-date with announcements and our launch deals.</p>
       <form class="container__content__form" action="">
         <input class="container__content__form__text"  type="text" placeholder="Email Address">
-        <input class="container__content__form__image" type="image" src="./images/icon-arrow.svg">
+        <input class="container__content__form__image" type="image" id="button" src="./images/icon-arrow.svg">
+        <p class="container__content__form__error"></p>
       </form>
     </div>
   </section>
-
+  <script src="./main.js"></script>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
