script for video

--- a/index.html
+++ b/index.html
@@ -12,25 +12,32 @@
 <body>
 
   <section class="container">
+    <!-- section 1 -->
     <img class="container__logo" src="./images/logo.svg">
+    <!-- section 2 -->
     <img class="container__picture" src="./images/hero-mobile.jpg" alt="picture">
+    <!-- section 3 -->
     <div class="container__content">
       <h1 class="container__content__title"><span class="container__content__title--color-red">We're</span> coming soon</h1>
       <p class="container__content__description">Hello fellow shoppers! We're currently building our new fashion store.
         Add your email below to stay up-to-date with announcements and our launch deals.</p>
       <form class="container__content__form" action="">
-        <input class="container__content__form__text"  type="text" placeholder="Email Address">
-        <input class="container__content__form__image" type="image" id="button" src="./images/icon-arrow.svg">
-        <p class="container__content__form__error"></p>
+        <input class="container__content__form__email"  type="email" placeholder="Email Address">
+        <input class="container__content__form__button" type="image" src="./images/icon-arrow.svg">
+        <p class="container__content__form__email--error"></p>
       </form>
     </div>
+
   </section>
-  <script src="./main.js"></script>
+  
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.youtube.com/CodingTube">David Ruiz</a>.
+      Coded by <a href="https://www.youtube.com/CodingTube" target="_blank">David Ruiz</a>.
     </p>
   </footer>
+
+  <script src="./main.js"></script>
+
 </body>
 </html>
