--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-  <section class="container">
+  <main class="container">
     <!-- section 1 -->
-    <img class="container__logo" src="./images/logo.svg">
+    <img class="container__logo" src="./images/logo.svg" alt="logo">
     <!-- section 2 -->
     <img class="container__picture" src="./images/hero-mobile.jpg" alt="picture">
     <!-- section 3 -->
@@ -21,14 +21,14 @@
       <h1 class="container__content__title"><span class="container__content__title--color-red">We're</span> coming soon</h1>
       <p class="container__content__description">Hello fellow shoppers! We're currently building our new fashion store.
         Add your email below to stay up-to-date with announcements and our launch deals.</p>
-      <form class="container__content__form" action="">
+      <form class="container__content__form" action="#">
         <input class="container__content__form__email"  type="email" placeholder="Email Address">
-        <input class="container__content__form__button" type="image" src="./images/icon-arrow.svg">
+        <input class="container__content__form__button" type="image" src="./images/icon-arrow.svg" alt="button">
         <p class="container__content__form__email--error"></p>
       </form>
     </div>
 
-  </section>
+  </main>
   
   <footer>
     <p class="attribution">
