--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
 
   <main class="container">
-    <!-- section 1 -->
+    <!-- block 1 -->
     <img class="container__logo" src="./images/logo.svg" alt="logo">
-    <!-- section 2 -->
+    <!-- block 2 -->
     <img class="container__picture" src="./images/hero-mobile.jpg" alt="picture">
-    <!-- section 3 -->
+    <!-- block 3 -->
     <div class="container__content">
       <h1 class="container__content__title"><span class="container__content__title--color-red">We're</span> coming soon</h1>
       <p class="container__content__description">Hello fellow shoppers! We're currently building our new fashion store.
